@@ -16,8 +16,7 @@ public class Card {
     public static void main(String[] args) {
         List<Card> deck = Stream.of(Suit.values())
                 .flatMap(suit -> Stream.of(Value.values())
-                        .map(value -> new Card(suit, value)))
-                .collect(Collectors.toList());
+                        .map(value -> new Card(suit, value))).toList();
         System.out.println(deck);
     }
 
