@@ -3,7 +3,6 @@ package ru.job4j.stream;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class StudentLevel {
     public static List<Student> levelOf(List<Student> students, int bound) {
@@ -11,6 +10,6 @@ public class StudentLevel {
                 .filter(Objects::nonNull)
                 .sorted(Comparator.comparing(Student::getScore))
                 .takeWhile(st -> st.getScore() > bound)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
